--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   dio:
   floor:
   shared_preferences:
+  geolocator:
+  google_maps_flutter: ^2.0.11
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
