--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   geolocator:
   google_maps_flutter: ^2.0.11
   flutter_polyline_points: ^1.0.0
+  flutter_animarker: ^3.2.0
+
 
 dev_dependencies:
   flutter_test:
