--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,15 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext {
+        agp_version = '8.1.0'
+    }
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
